--- a/js projects/diger/4/style.css
+++ b/js projects/diger/4/style.css
@@ -93,15 +93,42 @@ p {
   color: var(--clr-grey-5);
 }
 main{
-    min-height: 100vh;
-    display: grid;
-    place-items: center;
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
 }
-
 #value{
-    font-size:6rem;
-    font-weight: bold;
+  font-size: 6rem;
+  font-weight: bold;
 }
+.btn{
+  text-transform: uppercase;
+  background: transparent;
+  color: black;
+  padding: 0.375rem 0.75rem;
+  letter-spacing: var(--spacing);
+  display: inline-block;
+  transition: var(--transition);
+  font-size: 0.875rem;
+  border: 2px solid var(--clr-black);
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  border-radius: var(--radius);
+  margin: 0.5rem;
+}
+.art:hover{
+  color: white;
+  background: green;
+}
+.azal:hover{
+  color: white;
+  background-color: red;
+}
+.reset:hover{
+  color: white;
+  background-color: #222;
+}
+/*
 .btn{
     text-transform: uppercase;
     background: transparent;
@@ -120,7 +147,7 @@ main{
 .btn:hover {
   color: var(--clr-white);
   background: var(--clr-black);
-}
+} */
 
 
 
