--- a/js projects/10kart-game/style.css
+++ b/js projects/10kart-game/style.css
@@ -44,14 +44,15 @@ html{
   grid-gap: 10px;
   margin: 50px;
   justify-content: center;
+  perspective: 500px;
 
 }
 .card{
-  background-color: black;
+  position: relative;
   height: 175px;
   width: 125px;
-  position: relative;
 }
+
 .card-face{
   position: absolute;
   width: 100%;
@@ -59,11 +60,44 @@ html{
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+  backface-visibility: hidden;
+  border-radius: 12px;
+  border-width: 1px;
+  border-style: solid;
+  transition: transform 500ms ease-in-out;
+}
+.card.visible .card-back{
+  transform: rotateY(-180deg);
+}
+.card.visible .card-front{
+  transform: rotateY(0);
+}
+.card-back{
+  background-color: black;
+  border-color: #FF6D00;
+}
+.card-front{
+  background-color: #FFBB89;
+  border-color: #333;
+  transform: rotateY(180deg);
+}
+.card-value{
+  transition: transform 100ms ease-in-out;
+  transform: scale(.9);
+}
+.card-front:hover .card-value{
+  transform: scale(1);
 }
 .cob-web{
   position: absolute;
   width: 47px;
   height: 47px;
+  transition: width 100ms ease-in-out, height 100ms ease-in-out;
+}
+.card-face:hover .cob-web{
+  width: 52px;
+  height: 52px;
 }
 .cob-web-top-left{
   transform: rotate(270deg);
@@ -88,11 +122,15 @@ html{
 }
 .spider{
   align-self: flex-start;
+  transform: translateY(-10px);
+  transition: transform 100ms ease-in-out;
 }
 
+.card-back:hover .spider{
+  transform: translateY(0);
+}
 
-
-
+/* 26 da kaldım. */
 
 
 
